# StoryEngine

./: .dockerignore  .env.default  .gitignore  CLAUDE.md  README.md  docker-compose.gpu.yml  docker-compose.test.yml  docker-compose.yml  pytest.ini
.github/workflows/: smoke.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_phase2.py  003_sponsor.py  004_channel.py  005_phase4.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/app/api/: dedup.py  export.py  jobs.py  pipeline.py  reports.py  router.py  search.py  settings.py  stories.py  videos.py  webhooks.py  youtube.py
backend/app/models/: __init__.py  base.py  enums.py  job.py  setting.py  story.py  transcript.py  video.py  webhook.py
backend/app/schemas/: job.py  story.py  video.py
backend/app/services/: audio_extractor.py  dedup.py  embedder.py  ffprobe.py  nfo.py  playlist.py  scanner.py  settings.py  splitter.py  sponsorblock.py  srt.py  story_detector.py  thumbnail.py  transcriber.py  webhook_fire.py  youtube_upload.py
backend/app/worker/: tasks.py
docker/: backend.Dockerfile  frontend.Dockerfile  worker.Dockerfile
docker/entrypoints/: backend.sh
docker/ollama-mock/: Dockerfile  server.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dedup/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/app/manual/: page.tsx
frontend/src/components/: sidebar.tsx
frontend/src/lib/: api.ts
tests/: conftest.py  test_smoke.py
(+10 files in other folders)
